--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <% if current_user %>
+    <%= current_user.username %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
